--- a/css/style.css
+++ b/css/style.css
@@ -1,160 +1,63 @@
-/* General Styles */
-body {
-  font-family: 'Open Sans', sans-serif;
-}
+  body{
+    margin:40px auto;
+    max-width:800px;
+    line-height:1.6;
+    font-size: 18px;
+    text-align: center;
+    color:#444;
+    background-color: white;
+    padding:0 10px}
 
-header {
-  height: 100vh;
-}
+  @media only screen and (max-width: 500px) {
+    body{
+    margin:40px auto;
+    max-width:650px;
+    line-height:1.6;
+    
+    color:#444;
+    background-color: white;
+    padding:0 10px}
 
-section {
-  padding: 100px 0;
-}
+       h1,h2,h3 {
+          font-size:30px;
+      }
+    }
 
-footer {
-  padding: 50px 0 20px; /*140px 0 200px*/
-}
+  h1,h2,h3{
 
-h1, h2, h4, h6, p, ul {
-  margin: 0px 0 32px;
-}
+    line-height:1.2;
+    font-family: Arial;
+    text-align: center;}
 
-h1 {
-  margin-top: 7vh;
-  font-size: 3em;
-  line-height: 80px;
-}
+  .pics{
+    width: 300px ;
+      margin-left: auto ;
+      margin-right: auto ;
+  }
 
-h2 {
-  font-size: 30px;
-  line-height: 50px;
-}
+  p{
+    padding: 0 20px;
+    font-family: calibri;
+    font-size:18px;
 
-h4 {
-  font-size: 22px;
-  line-height: 34px;
-}
+  }
 
-h6 {
-  font-size: 19px;
-  line-height: 31px;
-}
 
-p {
-  font-size: 17px;
-  line-height: 31px;
-  letter-spacing: 0.16px;
-}
 
-/* Section Styles */
-header {
-  background-color: #28669F;
-  color: #fff;
-}
 
-header a {
-  color: rgba(255,255,255,.9);
-}
+  h1{
+    text-align: center;
+  }
 
-header a:hover {
-  color: rgba(255,255,255,.25);
-  text-decoration: none;
-}
+  img{
+    opacity: 1;
+  }
 
-header a:visited {
-  color: rgba(255,255,255,.9);
-  text-decoration: none;
-}
+  img:hover{
+    opacity: 0.5;
+  }
 
-.about {
-  background-color: #fff;
-}
 
-.blue-project {
-  background-color: #0098b4;
-}
-
-.gray-project {
-  background-color: #232c39;
-}
-
-.orange-project {
-  background-color: #ff7268;
-}
-
-.learning {
-  background-color: #eff4f4;
-}
-
-.contact {
-  background-color: #161616;
-}
-
-footer {
-  background-color: #fff;
-}
-
-/* Typography Styles */
-.light-type h2,
-.light-type h4 {
-  color: rgba(255,255,255,.9);
-}
-
-.light-type p {
-  color: rgba(255,255,255,.75);
-}
-
-.dark-type h2,
-.dark-type h4 {
-  color: rgba(0,0,0,.9);
-}
-
-.dark-type p {
-  color: rgba(0,0,0,.75);
-}
-
-header h1,
-header ul {
-  text-align: center;
-}
-
-/* Button Styles */
-.btn {
- border: 1px solid rgba(0,0,0,.75);
- font-size: 17px;
- padding: 7px 12px;
- font-weight: normal;
- margin: 6px 0;
- display: inline-block;
- margin-right: 12px;
- text-decoration: none;
- min-width: 120px;
-}
-
-.btn:focus {
-  outline:0;
-}
-
-.btn-dark {
- background: rgba(0,0,0,0);
- color: rgba(0,0,0,.75);
- border: 1px solid rgba(0,0,0,.75);
-}
-
-.btn-dark:hover, .btn-dark:active {
-  background: rgba(0,0,0,0);
-  color: rgba(0,0,0,1);
-  border: 1px solid rgba(0,0,0,1);
-}
-
-.btn-light {
- background: rgba(0,0,0,0);
- color: rgba(255,255,255,.75);
- border: 1px solid rgba(255,255,255,.75);
-}
-
-.btn-light:hover, .btn-light:active {
-  background: rgba(0,0,0,0);
-  color: rgba(255,255,255,1);
-  border: 1px solid rgba(255,255,255,1);
-}
+  
+   
+        
