--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ p {
 .banner {
   background-size: cover;
   text-align: center;
-  background: url(../img/bg2.jpg);
   height: 100%; /* Full PAge */
   padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
   padding-bottom: 50px;
@@ -87,8 +86,8 @@ p {
 
 .contact-icon {
     padding: 10px 10px 10px 10px;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
 }
 
 /* Portfolio */
@@ -193,12 +192,6 @@ http://www.andreagalanti.it
 
 /*General */
 
-body, html {
-  height: 100%;
-  width: 100%;
-  overflow-x:hidden;
-}
-
 ::-moz-selection{background:#1abc9c;color:white}
 
 ::selection{background:#1abc9c;color:white}
@@ -270,35 +263,6 @@ margin: auto;
 
 .h3_home{font-weight: 300;}
 
-/*own carousel */
-
-#owl-demo .item{
-  margin: 3px;
-}
-#owl-demo .item img{
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-#owl-demo-1 .item{
-  margin: 3px;
-}
-#owl-demo-1 .item img{
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-/*magnific */
-.mfp-bg {
-background: #000000 !important;
-opacity: 0.95 !important;
-filter: alpha(opacity=95) !important;
-}
-
-.item .img-responsive {cursor:url(../img/cross.png),auto;}
-
 /* Preloader */
 #preloader {
   position: fixed;
@@ -320,25 +284,6 @@ filter: alpha(opacity=95) !important;
   background-repeat:no-repeat;
   background-position:center;
   margin:-100px 0 0 -100px; /* is width and height divided by two */
-}
-
-
-/* Button */ 
-.mybutton_standard {
-  border: 1px solid #fff;
-  color: #fff;
-}
-
-.mybutton_cyano{
-  border: 1px solid #4A90BE;
-  color: #fff;
-  background-color:#4A90BE;
-}
-
-.mybutton_cyano:hover{
-  border: 1px solid #4A90BE;
-  color: #4A90BE !important;
-  background: rgba(204, 204, 204, 0);
 }
 
 .button_down img {
@@ -430,13 +375,15 @@ color: #ECEBEB;
 }
 
 .intro-header {
-  height: 100%; /* Full PAge */
-  padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-  padding-bottom: 50px;
   color: #f8f8f8;
-  background: url(../img/bg5.jpg) no-repeat center center;
   background-size: cover;
   text-align: center;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  color: white;
 }
 
 .intro-message {
@@ -1248,14 +1195,11 @@ color: #ECEBEB;
 /* All Mobile Sizes (devices and browser) */
   @media only screen and (max-width: 767px) {
     .intro-header {
-      height: 100%;
-      padding-top: 50px;
-      padding-bottom: 50px;
+
       color: #f8f8f8;
-        background-image: none; 
+      background-image: none; 
       background-size: cover;
       text-align: center;
-      background-color: #34495e;
     }
     
     h1, .h1 {
@@ -1386,60 +1330,6 @@ p.copyright {
   margin: 15px 0 0;
 }
 
-@media (max-width: 767px) {
-  .intro-message {
-    padding-bottom: 15%;
-  }
-
-  .intro-message > h1 {
-    font-size: 3em;
-  }
-
-  ul.intro-social-buttons > li {
-    display: block;
-    margin-bottom: 20px;
-    padding: 0;
-  }
-
-  ul.intro-social-buttons > li:last-child {
-    margin-bottom: 0;
-  }
-
-  .intro-divider {
-    width: 100%;
-  }
-}
-
-
-@media screen and (max-width: 770px) {
-  .mockup-left {
-    float: none;
-    margin: 0 auto 20px;
-  }
-
-  .mockup-right {
-    
-  }
-
-  .joiner {
-    display: block;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .mockup-content > span:nth-last-child(2) {
-    width: calc(100% - 210px);
-  }
-}
-
-@media screen and (max-width: 25em) {
-
-  .codrops-icon span {
-    display: none;
-  }
-
-}
-
 .hvr-grow {
     display: inline-block;
     vertical-align: middle;
@@ -1490,3 +1380,14 @@ p.copyright {
   color:black;
   text-align: left;
 }
+
+#particles-js{
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  background-image: url('');
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+
