--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,16 @@ p {
 }
 
 .img-circle {
-  margin:35px 0px 0px 0px;   
-  width:200px;
-  height:200px;
+  padding:5px;
+  height: 200px;
+  width: 200px;
+
+}
+
+.display-picture-wrapper {
+  height:auto;
+  padding-top:15px;
+  padding-bottom:15px;
 }
 
 .body-text {
@@ -242,7 +249,8 @@ margin: auto;
 }
 
 .h1_home{
-  font-size: 70px;
+  padding:10px;
+  font-size: 55px;
   font-weight: 300;
   letter-spacing: 6px;
 }
@@ -596,7 +604,7 @@ p.copyright {
 }
 
 .experience-area {
-  padding:10px 5px 10px 5px;
+  padding:10px;
 }
 
 .experience-text {
