--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,8 @@ p {
 
 .img-circle {
   padding:5px;
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
 
 }
 
@@ -205,7 +205,7 @@ p {
   padding: 90px 0;
 }
 
-.descp{
+.descp {
   margin: 0;
   padding: 0;
   line-height: 40px !important;
@@ -243,11 +243,6 @@ font-weight: 300;
 -moz-animation-timing-function: ease-in-out;
 }
 
-.phone-image {
-max-width: 250px;
-margin: auto;
-}
-
 .h1_home{
   padding:5px;
   font-size: 55px;
@@ -260,7 +255,9 @@ margin: auto;
   font-weight: 300;
 }
 
-.h3_home{font-weight: 300;}
+.h3_home {
+  font-weight: 300;
+}
 
 /* Preloader */
 #preloader {
@@ -359,6 +356,7 @@ color: #ECEBEB;
 .navbar-default .navbar-brand {
 color: #ffffff;
 }
+
 .navbar-default .navbar-brand:hover {
 color: #ECEBEB;
 }
@@ -375,14 +373,13 @@ color: #ECEBEB;
 
 .intro-header {
   color: #f8f8f8;
-  background-size: cover;
   text-align: center;
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
+
   left: 0;
   right: 0;
   color: white;
+  height:auto;
 }
 
 .intro-message {
