--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,17 +7,37 @@ html, body
   font-family: 'Ubuntu';
 }
 
-p {
-  color:white;
-  font-size: 40;
+
+.h1_home{
+  padding:5px;
+  font-size: 55px;
+  font-size: 8vw;
+  font-weight: 300;
+  letter-spacing: 4px;
 }
 
-.banner {
-  background-size: cover;
+.h2_home {
+  font-size: 35px;
+  font-size: 4vw;
+  font-weight: 300;
+}
+
+.abcen{position: absolute;bottom: 5%;}
+
+.button_down img {
+width: 50px;
+  
+}
+
+.intro-header {
+  color: #f8f8f8;
   text-align: center;
-  height: 100%; 
-  padding-top: 50px; 
-  padding-bottom: 50px;
+  position: absolute;
+
+  left: 0;
+  right: 0;
+  color: white;
+  height:auto;
 }
 
 .about-me {
@@ -46,56 +66,68 @@ p {
 }
 
 .img-circle {
-  padding:5px;
   height: 150px;
   width: 150px;
-
+  max-width:100%;
+  max-height:90vh;
 }
 
 .display-picture-wrapper {
   height:auto;
-  padding-top:15px;
-  padding-bottom:15px;
+  padding-top:5px;
+  padding-bottom:10px;
 }
 
 .body-text {
   font-size: 26px;
 }
 
-.tech {
-    margin:15px;   
-    width:125px;
-    height:125px;
-}
-
-.navbar.navbar-default a {
-  color: white;
-}
-
-.navbar-default {
-    margin : auto;
-    position: fixed;
-    width: 100%;
-    background: #192231;
-    border-color: #192231;
-    border-radius: 0;
-    z-index: 100;
-}
-
-.nav.navbar-nav.navbar-right li a {
-    color: white;
-}
-
-.navbar-toggle {
-    color: white;
-    background-color: white;
-    outline-color: white;
+.img-tech-logo {
+  margin:15px;   
+  width:125px;
+  height:125px;
 }
 
 .contact-icon {
-    padding: 10px 10px 10px 10px;
-    width: 35px;
-    height: 35px;
+    padding: 5px 5px 5px 5px;
+    width: 40px;
+    height: 40px;
+}
+
+/* Experience */ 
+
+.experience-section {
+  background-color: white;
+  color:black;
+  border-radius: 25px;
+}
+
+.experience-icon {
+    margin: 0 auto;
+    width: 450px;
+    height: 225px;  
+    text-align: left;
+    padding:5px;
+}
+
+.experience-icon-left {
+    margin: 0 auto;
+    width: 150px;
+    height: 150px;  
+    text-align: right;
+}
+
+.experience-description {
+  padding:20px;  
+}
+
+.experience-area {
+  padding:10px;
+}
+
+.experience-text {
+  color:black;
+  text-align: left;
 }
 
 /* Portfolio */
@@ -114,12 +146,6 @@ p {
     width: 250px;
     height: 250px;
     text-align: center;
-    /*background: url(../img/portfolio-1.jpg);*/
-}
-
-.img-portfolio:hover {
-    opacity: 0.8;
-    background: url(../img/portfolio-3.jpg);
 }
 
 .portfolio-box {
@@ -170,18 +196,7 @@ p {
     opacity: 0.8;
 }
 
-.imagetext {
-  color: white;
-  font-size: 50px;
-  position:absolute;
-  top: 40%;
-  left: 0;
-  width: 100%;
-}
-
-.archive-head {
-  color: #FFFFE0;
-}
+/* Footer */
 
 #footer {
   padding: 10px;
@@ -190,76 +205,76 @@ p {
   text-align: center;
 }
 
-::-moz-selection{background:#1abc9c;color:white}
-
-::selection{background:#1abc9c;color:white}
-
-.abcen{position: absolute;bottom: 5%;}
-
-.abcen1{position: absolute;top: 20%;}
-
-.content-section-c {
-  border-top: 1px solid #32465A;
-  border-bottom: 1px solid #32465A;
-  background-color: #34495e;
-  padding: 90px 0;
+p.copyright {
+  margin: 15px 0 0;
 }
 
-.descp {
-  margin: 0;
-  padding: 0;
-  line-height: 40px !important;
+/* Media Queries TODO */
+
+@media only screen and (min-width: 960px) and (max-width: 1250px) {
+  
+}
+@media only screen and (min-width: 768px) and (max-width: 820px) {
+  
 }
 
-.glyphicon {
-  margin-right: 10px;
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+  
+    h1, .h1 {
+      font-size: 50px;
+    }
+    
+    h3, .h3 {
+      font-size: 20px;
+    }
+    
 }
 
-.lead2 {
-margin-bottom: 30px;
-margin-top: 20px;
-font-size: 18px;
-line-height: 1.46428571;
-font-weight: 300;
+
+@media only screen and (max-width: 767px) {
+  .intro-header {
+
+    color: #f8f8f8;
+    background-image: none; 
+    background-size: cover;
+    text-align: center;
+  }
+  
+  h1, .h1 {
+    font-size: 50px;
+  }
+  
+  h3, .h3 {
+    font-size: 20px;
+  }
+
+  #gallery1 {display:none}
+  
+  .button_down {display:none}  
 }
 
-.lead3 {
-margin-bottom: 0px;
-margin-top: 0px;
-font-size: 16px;
-color: #8D8D8D;
-line-height: 1.46428571;
-font-weight: 300;
+@media only screen and (min-width: 480px) and (max-width: 767px) { 
 }
 
-.float {
--webkit-animation-name: floatingx;
--webkit-animation-duration: 4s;
--webkit-animation-iteration-count: infinite;
--webkit-animation-timing-function: ease-in-out;
--moz-animation-name: floating;
--moz-animation-duration: 4s;
--moz-animation-iteration-count: infinite;
--moz-animation-timing-function: ease-in-out;
+/* Mobile Portrait */
+@media only screen and (max-width: 479px) {
 }
 
-.h1_home{
-  padding:5px;
-  font-size: 55px;
-  font-weight: 300;
-  letter-spacing: 4px;
+@media screen and (max-width: 600px) {
+  .morph-button-modal.open .morph-content {
+    top: 0% !important;
+    left: 0% !important;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    -webkit-transition: width 0.4s 0.1s, height 0.4s 0.1s, top 0.4s 0.1s, left 0.4s 0.1s;
+    transition: width 0.4s 0.1s, height 0.4s 0.1s, top 0.4s 0.1s, left 0.4s 0.1s;
+  }
 }
 
-.h2_heading{
-  font-size: 35px;
-  font-weight: 300;
-}
+/* Misc */
 
-.h3_home {
-  font-weight: 300;
-}
-
-/* Preloader */
 #preloader {
   position: fixed;
   top:0;
@@ -282,280 +297,14 @@ font-weight: 300;
   margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
 
-.button_down img {
-width: 50px;
-  
-}
-.btn-primary {
-  border-color: rgba(52, 73, 94, 0);
-}
-
-.tworow{margin-top: 90px;}
-
-.social {
-  font-size: 30px;
-  text-decoration: none;
-  list-style-type: none;
-  color: #1abc9c; 
-}
-
-.social > a:hover {
-  color: #1abc9c; 
-}
-
-.box-icon {
-  height: 150px;
-  width: 150px;
-  -moz-border-radius: 35px;
-  border-radius: 100%;
-  padding: 47px 10px;
-  background-color: #f0f1ec;
-  color: #034b81;
-  text-align: center;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-  margin-right: 15px;
-}
-
-.box-icon:hover {
-  background-color: #1abc9c;
-  color: #fff;
-}
-
-.owl-theme .owl-controls .owl-page span {
-background: #1abc9c !important;
-}
-
-/* Nav */
-.navbar {
-  position: relative;
-  min-height: 60px;
-  margin-bottom: 0; 
+#particles-js{
   width: 100%;
-  z-index: 999;
-  border-radius: 0; 
-}
-
-.navbar-default {
-  position: relative;
-  min-height: 60px;
-  width: 100%;
-  z-index: 999;
-  
-}
-
-.navbar-default .navbar-nav>li>a {
-color: #ffffff;
-}
-
-.navbar-default .navbar-nav>li>a:hover {
-color: #ECEBEB;
-}
-
-.navbar-default .navbar-brand {
-color: #ffffff;
-}
-
-.navbar-default .navbar-brand:hover {
-color: #ECEBEB;
-}
-
-.navbar-brand {
-  letter-spacing: 3px;
-  font-weight: 400 !important;
-}
-
-.lead {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.intro-header {
-  color: #f8f8f8;
-  text-align: center;
-  position: absolute;
-
-  left: 0;
-  right: 0;
-  color: white;
-  height:auto;
-}
-
-.intro-message {
-  position: relative;
-  padding-top: 12%;
-  padding-bottom: 20%;
-}
-
-.list-inline {
-  margin-top: 30px;
-}
-.intro-message > h1 {
-  margin: 0;
-  font-size: 5em;
-  font-weight: 400;
-  letter-spacing: 3px;
-}
-
-.intro-divider {
-  width: 400px;
-  border-top: 1px solid #f8f8f8;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.intro-message > h3 {
-  margin: 0;
-  font-size: 2.8em;
-  font-weight: 300;
-  letter-spacing: 0px;
-  margin-top: 10px;
-}
-
-
-.network-name {
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: 1.5px;
-}
-
-.content-section-a {
-  background-color: #f8f8f8;
-  padding: 90px 0; 
-}
-
-.content-section-b {
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
-  padding: 90px 0; 
-}
-
-.section-heading {
-  margin-bottom: 30px;
-}
-
-.section-heading-spacer {
-  border-top: 3px solid #e7e7e7;
-  width: 200px;
-  float: left;
-}
-
-.banner {
-  padding: 100px 0;
-  color: #f8f8f8;
-  background: url(../img/intro/banner-bg.jpg) no-repeat center center;
+  height: 100%;
+  background-color: black;
+  background-image: url('');
   background-size: cover;
-}
-
-/* Animate */
-.rotate {
-    -webkit-transition-duration: 0.8s;
-    -moz-transition-duration: 0.8s;
-    -o-transition-duration: 0.8s;
-    transition-duration: 0.8s;
-     
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-     
-    overflow:hidden;
- 
-    }  
- 
-.rotate:hover  
-{
-    -webkit-transform:rotate(360deg);
-    -moz-transform:rotate(360deg);
-    -o-transform:rotate(360deg);
-}  
-
-.no-transition {
-  -webkit-transition: none !important;
-  transition: none !important;
-}
-
-/* Media Queries */
-/* Media queries!
--------------------------------------------------------------------------------*/
-
-/* 960 Screens */
-@media only screen and (min-width: 960px) and (max-width: 1250px) {
-  
-}
-@media only screen and (min-width: 768px) and (max-width: 820px) {
-  
-}
-/* Tablet */
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-  
-    h1, .h1 {
-      font-size: 50px;
-    }
-    
-    h3, .h3 {
-      font-size: 20px;
-    }
-    
-}
-
-
-/* All Mobile Sizes (devices and browser) */
-  @media only screen and (max-width: 767px) {
-    .intro-header {
-
-      color: #f8f8f8;
-      background-image: none; 
-      background-size: cover;
-      text-align: center;
-    }
-    
-    h1, .h1 {
-      font-size: 50px;
-    }
-    
-    h3, .h3 {
-      font-size: 20px;
-    }
-    #gallery1{display:none}
-    
-    .button_down {display:none}
-    
-    
-  }
-
-/* Mobile Landscape */
-@media only screen and (min-width: 480px) and (max-width: 767px) { 
-  
-  
-  
-}
-
-/* Mobile Portrait */
-@media only screen and (max-width: 479px) {
-  
-  
-}
-@media screen and (max-width: 600px) {
-  .morph-button-modal.open .morph-content {
-    top: 0% !important;
-    left: 0% !important;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    -webkit-transition: width 0.4s 0.1s, height 0.4s 0.1s, top 0.4s 0.1s, left 0.4s 0.1s;
-    transition: width 0.4s 0.1s, height 0.4s 0.1s, top 0.4s 0.1s, left 0.4s 0.1s;
-  }
-}
-
-footer {
-  background-color: #f8f8f8;
-  padding: 50px 0;
-}
-
-p.copyright {
-  margin: 15px 0 0;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .hvr-grow {
@@ -573,49 +322,5 @@ p.copyright {
 .hvr-grow:focus,
 .hvr-grow:active {
     transform: scale(1.1);
-}
-
-.experience-section {
-  background-color: white;
-  color:black;
-  border-radius: 25px;
-}
-
-.experience-icon {
-    margin: 0 auto;
-    width: 450px;
-    height: 225px;  
-    text-align: left;
-    padding:5px;
-}
-
-.experience-icon-left {
-    margin: 0 auto;
-    width: 150px;
-    height: 150px;  
-    text-align: right;
-}
-
-.experience-description {
-  padding:20px;  
-}
-
-.experience-area {
-  padding:10px;
-}
-
-.experience-text {
-  color:black;
-  text-align: left;
-}
-
-#particles-js{
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  background-image: url('');
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
 }
 
