Change project item highlighting
Hover now highlights the background black to fit with the current theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@ html, body
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: #990099;
+    background: black;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
