--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ html, body
     color: #fff;
     opacity: 0;
     background: black;
+    border-radius: 15px;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
